ft: medical record and other new classes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=system-security
 spring.datasource.username=postgres
-spring.datasource.password=coding
+spring.datasource.password=0788299605
 spring.datasource.url=jdbc:postgresql://localhost:5432/Health-Care-System
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql= true
 spring.datasource.driver-class-name=org.postgresql.Driver
