--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,16 @@ spring.application.name=system-security
 spring.datasource.username=postgres
 spring.datasource.password=0788299605
 spring.datasource.url=jdbc:postgresql://localhost:5432/Health-Care-System
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql= true
 spring.datasource.driver-class-name=org.postgresql.Driver
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.path=/swagger-ui.html
+
+
+spring.jpa.properties.hibernate.hbm2ddl.delimiter=;
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
+spring.jpa.properties.hibernate.schema_update.unique_constraint_strategy=skip
+spring.jpa.open-in-view=false
